# transformer-libtorch

./: CMakeLists.txt  README.md
config/: config.ini
data/fra-eng/: source_vocab  target_vocab
include/: config_parser.h  model_libtorch.h  model_tensorrt.h  string_utils.h  transformer.h  vocab.h
src/: config_parser.cc  model_libtorch.cc  model_tensorrt.cc  string_utils.cc  transformer.cc  vocab.cc
tools/: debug.cc  infer_libtorch.cc  infer_tensorrt.cc  main.cc
transformer/: config.py  data_utils.py  inference.py  model.py  save_model_trace.py  temp.py  trainer.py
